cudf/bind/cudf_cpp.pxd


    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @brief Computes the hash values of the rows in the specified columns of the
    #  * input columns and bins the hash values into the desired number of partitions.
    #  * Rearranges the input columns such that rows with hash values in the same bin
    #  * are contiguous.
    #  *
    #  * @Param[in] num_input_cols The number of columns in the input columns
    #  * @Param[in] input[] The input set of columns
    #  * @Param[in] columns_to_hash[] Indices of the columns in the input set to hash
    #  * @Param[in] num_cols_to_hash The number of columns to hash
    #  * @Param[in] num_partitions The number of partitions to rearrange the input rows into
    #  * @Param[out] partitioned_output Preallocated gdf_columns to hold the rearrangement
    #  * of the input columns into the desired number of partitions
    #  * @Param[out] partition_offsets Preallocated array the size of the number of
    #  * partitions. Where partition_offsets[i] indicates the starting position
    #  * of partition 'i'
    #  * @Param[in] hash The hash function to use
    #  *
    #  * @Returns  If the operation was successful, returns GDF_SUCCESS
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_hash_partition(int num_input_cols,
                                 gdf_column * input[],
                                 int columns_to_hash[],
                                 int num_cols_to_hash,
                                 int num_partitions,
                                 gdf_column * partitioned_output[],
                                 int partition_offsets[],
                                 gdf_hash_func hash)

    # /* prefixsum */

    cdef gdf_error gdf_prefixsum_generic(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i8(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i32(gdf_column *inp, gdf_column *out, int inclusive)
    cdef gdf_error gdf_prefixsum_i64(gdf_column *inp, gdf_column *out, int inclusive)


    # /* unary operators */

    # /* hashing */

    # /* --------------------------------------------------------------------------*/
    # /**
    #  * @Synopsis  Computes the hash value of each row in the input set of columns.
    #  *
    #  * @Param num_cols The number of columns in the input set
    #  * @Param input The list of columns whose rows will be hashed
    #  * @Param hash The hash function to use
    #  * @Param output The hash value of each row of the input
    #  *
    #  * @Returns   GDF_SUCCESS if the operation was successful, otherwise an appropriate
    #  * error code
    #  */
    # /* ----------------------------------------------------------------------------*/
    cdef gdf_error gdf_hash(int num_cols, gdf_column **input, gdf_hash_func hash, gdf_column *output)

    # /* trig */

    cdef gdf_error gdf_sin_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sin_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sin_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cos_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cos_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cos_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_tan_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_tan_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_tan_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_asin_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_asin_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_asin_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_acos_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_acos_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_acos_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_atan_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_atan_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_atan_f64(gdf_column *input, gdf_column *output)

    # /* exponential */

    cdef gdf_error gdf_exp_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_exp_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_exp_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_log_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_log_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_log_f64(gdf_column *input, gdf_column *output)

    # /* power */

    cdef gdf_error gdf_sqrt_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sqrt_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_sqrt_f64(gdf_column *input, gdf_column *output)


    # /* rounding */

    cdef gdf_error gdf_ceil_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_ceil_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_ceil_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_floor_generic(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_floor_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_floor_f64(gdf_column *input, gdf_column *output)

    # /* casting */

    cdef gdf_error gdf_cast_generic_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_f32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_f32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_f64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_f64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i8(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i8(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_i64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_i64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_date32(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_date32(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i8_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_i64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_f64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date32_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_date64_to_date64(gdf_column *input, gdf_column *output)
    cdef gdf_error gdf_cast_timestamp_to_date64(gdf_column *input, gdf_column *output)

    cdef gdf_error gdf_cast_generic_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i8_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_i64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_f32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_f64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_date32_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_date64_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
    cdef gdf_error gdf_cast_timestamp_to_timestamp(gdf_column *input, gdf_column *output, gdf_time_unit time_unit)
